<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="?attr/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:textColor="?attr/colorText"
        android:background="?attr/colorItemBackground"
        android:id="@+id/btn_new_game"
        android:text="Новая игра"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"/>
    <Button
        android:textColor="?attr/colorText"
        android:background="?attr/colorItemBackground"
        android:id="@+id/btn_settings"
        android:text="Настройки"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"/>

    <Button
        android:textColor="?attr/colorText"
        android:background="?attr/colorItemBackground"
        android:id="@+id/btn_high_score_table"
        android:text="Таблица рекордов"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"/>

    <Button
        android:textColor="?attr/colorText"
        android:background="?attr/colorItemBackground"
        android:id="@+id/btn_exit"
        android:text="Выход"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"/>

</LinearLayout>